--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "website_yoga_teacher",
+  "name": "_teacher",
   "version": "1.0.0",
   "description": "responsive website for a yoga teacher",
   "main": "index.js",
