--- a/fly.toml
+++ b/fly.toml
@@ -9,8 +9,12 @@ console_command = "/code/manage.py shell"
 
 [build]
 
+[deploy]
+  release_command = "python manage.py migrate"
+
 [env]
   PORT = "8000"
+  DEBUG = false
 
 [http_service]
   internal_port = 8000
