--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for gosiapardula on 2023-08-25T10:43:48+02:00
+# fly.toml app configuration file generated for szkolajogi on 2023-09-15T10:35:54+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "gosiapardula"
+app = "szkolajogi"
 primary_region = "waw"
 console_command = "/code/manage.py shell"
 
@@ -13,8 +13,8 @@ console_command = "/code/manage.py shell"
   release_command = "python manage.py migrate"
 
 [env]
+  DEBUG = "false"
   PORT = "8000"
-  DEBUG = false
 
 [http_service]
   internal_port = 8000
